--- a/AG-Dedication.Rmd
+++ b/AG-Dedication.Rmd
@@ -24,7 +24,8 @@ While [`.pdf`](http://opendatahandbook.org/glossary/en/terms/pdf/) is an open fo
 
 There are a number of potential tools to extract from a table locked in a pdf into other formats. Tabulizer is an open source one that works.
 
-First we want to scrape the RPAD webpage (https://www.realpropertyhonolulu.com/dedications/agricultural-dedications/) for the most recent pdf of dedications.
+### First we want to scrape the RPAD webpage for most recent dedications list
+See RPAD (https://www.realpropertyhonolulu.com/dedications/agricultural-dedications/) for the most recent pdf of dedications.
 ```{r}
 library(rvest)
 
@@ -32,11 +33,13 @@ rpad <- read_html("https://www.realpropertyhonolulu.com/dedications/agricultural
 
 
 rrr <- rpad %>% html_nodes("a") %>% # nodes
-  html_attr('href') %>% data_frame()
+  html_attr('href') %>% data.frame() 
 
-
+# get pdf link
+rrr$.[grep("pdf",x = rrr$.)]
 ```
 
+### Compile yearly report pdfs into single dataset
 Once files are collected, scrape the pages of tables into a single dataframe and label it by year
 
 ```{r}
@@ -127,19 +130,80 @@ t$End.Year <- as.numeric(t$End.Year)
 t$Year <- as.numeric(2019)
 ag19 <- t
 rm(table, t)
+
+
+#2020
+# put file into Tabula GUI, extracted to CSV
+t <- read.csv("Dedication History/tabula-ag2020_121519.csv")
+t <- rename(t, "TMK" = "Parcel.ID..TMK.")
+t$TMK <- as.character(t$TMK)
+t$End.Year <- as.numeric(t$End.Year)
+t$Year <- as.numeric(2020)
+ag20 <- t
+
+#2021
+# put file into Tabula GUI, extracted to CSV
+t <- read.csv("Dedication History/tabula-ag2021_121520.csv")
+t <- rename(t, "TMK" = "Parcel.ID..TMK.")
+t$TMK <- as.character(t$TMK)
+t$End.Year <- as.numeric(t$End.Year)
+t$Year <- as.numeric(2021)
+ag21 <- t
+
+
+#2022
+# put file into Tabula GUI, extracted to CSV
+t <- read.csv("Dedication History/tabula-ag2022_121521.csv")
+t <- rename(t, "TMK" = "Parcel.ID..TMK.")
+t$TMK <- as.character(t$TMK)
+t$End.Year <- as.numeric(t$End.Year)
+t$Year <- as.numeric(2022)
+ag22 <- t
+
+#2023
+# put file into Tabula GUI, extracted to CSV
+t <- read.csv("Dedication History/tabula-ag2023_121522.csv")
+t <- rename(t, "TMK" = "Parcel.ID..TMK.")
+t$TMK <- as.character(t$TMK)
+t$End.Year <- as.numeric(t$End.Year)
+t$Year <- as.numeric(2023)
+ag23 <- t
 ```
 
-Now merge all the data frames into a list
-
+#### Now merge all the data frames
 ```{r}
 # bind rows of all into a single dataframe
-dedications <- bind_rows(ag15, ag16, ag17, ag18, ag19)
+dedications <- bind_rows(ag15, ag16, ag17, ag18, ag19, ag20, ag21)
 
 glimpse(dedications)
 
+# save the file
+write.csv(dedications, "Ag Dedications.csv",row.names = F)
+
 # clean up
-rm(ag15, ag16, ag17, ag18, ag19)
+rm(ag15, ag16, ag17, ag18, ag19, ag20, ag21)
 ```
+
+### Merge with ownership data
+
+```{r}
+# read in owner data file from:
+# https://honolulu-cchnl.opendata.arcgis.com/datasets/cchnl::ownerdat-table/about
+
+own <- read.csv("~/Downloads/OWNERDAT_-_Table.csv")
+own$PARID <- as.character(own$PARID)
+
+
+d21 <- merge(x=dedications, y=own, by.x="TMK", by.y = "PARID", all.x=TRUE, sort = TRUE) %>% filter(Year == 2023)
+
+View(d23)
+
+
+write.csv(d23, "2023 Parcel Data.csv")
+```
+
+
+
 
 ### Explore the compiled data
 - TODO: turn output histograms into facet grid
@@ -168,7 +232,7 @@ library(rJava)
 library(tabulizer)
 
 # variable of the dedication list pdf url
-rpad <- "https://www.realpropertyhonolulu.com/media/1569/ag.pdf" #2019
+rpad <- "hViewttps://www.realpropertyhonolulu.com/media/1569/ag.pdf" #2019
 
 # dowload file to disk (simple way)
 #download.file(rpad, "2018agdedications.pdf")
@@ -357,15 +421,28 @@ x = dlshape(shploc="http://files.hawaii.gov/dbedt/op/gis/data/oahtmk.shp.zip", "
 
 ```{r}
 library(raster)
+library(sp)
 # read data    
-p <- shapefile("~/Downloads/oahtmk.shp/oahtmk.shp")
-d <- dedications
+p <- shapefile("~/GIS/GIS Files/oahtmk.shp/oahtmk.shp")
+d$TMK <- d21$TMK.y
+# merge on TMK
+m <- sp::merge(p, d, by='TMK', duplicateGeoms = TRUE)
 
-# merge on common variable, here called 'key'
-m <- merge(p, d, by='key')
+m@data %>% filter(Year == 2021)
 
-# perhaps save as shapefile again
-shapefile(m, "path/merged.shp")
+m[m$Year > 2020,]
+
+m <- m[complete.cases(m$Year), ]
+m@data
+write.csv(d21, "2021 ag dedication ownership.csv",row.names = F)
+
+write.csv(m@data, "2021 ag dedication parcels.csv",row.names = F)
+
+# save shapefile
+shapefile(m, "merged.shp", overwrite=TRUE)
 ```
 
 tmk8 <- dedications[1][1:5]
+
+
+
